--- a/nails.html
+++ b/nails.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" media="print" onload="this.media='all'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap"></noscript>
   <link rel="stylesheet" href="assets/style.ae87f78b.css">
+  <link rel="stylesheet" href="assets/mobile.css">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to content</a>
@@ -95,74 +96,80 @@
 
     <section class="section surface">
       <div class="container service-layout">
-        <article id="biab" class="service-section card">
-          <h2 class="section-title">BIAB</h2>
-          <p class="section-intro">Builder in a bottle designed to reinforce natural nails while keeping a refined finish.</p>
-          <div class="grid grid-2">
-            <div>
-              <h3>Best for</h3>
-              <ul class="service-list">
-                <li>Clients wanting added strength with a natural shape</li>
-                <li>Regular maintenance appointments every few weeks</li>
-                <li>A polished look with or without nail art accents</li>
-              </ul>
-            </div>
-            <div>
-              <h3>Aftercare</h3>
-              <ul class="aftercare-list">
-                <li>Apply cuticle oil daily to keep the area hydrated</li>
-                <li>Use gloves for cleaning and prolonged water exposure</li>
-                <li>Book infills before lifting appears for best retention</li>
-              </ul>
+        <details id="biab" class="service-section card service-accordion" open>
+          <summary class="section-title">BIAB</summary>
+          <div class="service-content">
+            <p class="section-intro">Builder in a bottle designed to reinforce natural nails while keeping a refined finish.</p>
+            <div class="grid grid-2">
+              <div>
+                <h3>Best for</h3>
+                <ul class="service-list">
+                  <li>Clients wanting added strength with a natural shape</li>
+                  <li>Regular maintenance appointments every few weeks</li>
+                  <li>A polished look with or without nail art accents</li>
+                </ul>
+              </div>
+              <div>
+                <h3>Aftercare</h3>
+                <ul class="aftercare-list">
+                  <li>Apply cuticle oil daily to keep the area hydrated</li>
+                  <li>Use gloves for cleaning and prolonged water exposure</li>
+                  <li>Book infills before lifting appears for best retention</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </article>
+        </details>
 
-        <article id="gel-polish" class="service-section card">
-          <h2 class="section-title">Gel polish</h2>
-          <p class="section-intro">Glossy colour application with careful prep and tidy cuticle detailing.</p>
-          <div class="grid grid-2">
-            <div>
-              <h3>Best for</h3>
-              <ul class="service-list">
-                <li>Short to medium nails with a clean, high-shine finish</li>
-                <li>Clients who like regular colour changes</li>
-                <li>Special occasion sets and seasonal shades</li>
-              </ul>
-            </div>
-            <div>
-              <h3>Aftercare</h3>
-              <ul class="aftercare-list">
-                <li>Avoid peeling product and book professional removal</li>
-                <li>Use a nourishing hand cream after washing hands</li>
-                <li>Keep nails dry after showers before styling products</li>
-              </ul>
+        <details id="gel-polish" class="service-section card service-accordion" open>
+          <summary class="section-title">Gel Polish</summary>
+          <div class="service-content">
+            <p class="section-intro">Glossy colour application with careful prep and tidy cuticle detailing.</p>
+            <div class="grid grid-2">
+              <div>
+                <h3>Best for</h3>
+                <ul class="service-list">
+                  <li>Short to medium nails with a clean, high-shine finish</li>
+                  <li>Clients who like regular colour changes</li>
+                  <li>Special occasion sets and seasonal shades</li>
+                </ul>
+              </div>
+              <div>
+                <h3>Aftercare</h3>
+                <ul class="aftercare-list">
+                  <li>Avoid peeling product and book professional removal</li>
+                  <li>Use a nourishing hand cream after washing hands</li>
+                  <li>Keep nails dry after showers before styling products</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </article>
+        </details>
 
-        <article id="gel-extensions" class="service-section card">
-          <h2 class="section-title">Gel extensions</h2>
-          <p class="section-intro">Structured extensions tailored to your preferred length, shape and finish.</p>
-          <div class="grid grid-2">
-            <div>
-              <h3>Best for</h3>
-              <ul class="service-list">
-                <li>Clients wanting extra length and structure</li>
-                <li>Statement designs, intricate art and special events</li>
-                <li>Creating a consistent shape across all nails</li>
-              </ul>
-            </div>
-            <div>
-              <h3>Aftercare</h3>
-              <ul class="aftercare-list">
-                <li>Avoid using nails as tools to reduce stress on the tip</li>
-                <li>Book maintenance when regrowth becomes noticeable</li>
-                <li>Follow aftercare guidance provided at your appointment</li>
-              </ul>
+        <details id="gel-extensions" class="service-section card service-accordion" open>
+          <summary class="section-title">Gel Extensions</summary>
+          <div class="service-content">
+            <p class="section-intro">Structured extensions tailored to your preferred length, shape and finish.</p>
+            <div class="grid grid-2">
+              <div>
+                <h3>Best for</h3>
+                <ul class="service-list">
+                  <li>Clients wanting extra length and structure</li>
+                  <li>Statement designs, intricate art and special events</li>
+                  <li>Creating a consistent shape across all nails</li>
+                </ul>
+              </div>
+              <div>
+                <h3>Aftercare</h3>
+                <ul class="aftercare-list">
+                  <li>Avoid using nails as tools to reduce stress on the tip</li>
+                  <li>Book maintenance when regrowth becomes noticeable</li>
+                  <li>Follow aftercare guidance provided at your appointment</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </article>
+        </details>
       </div>
     </section>
 
@@ -176,22 +183,25 @@
           - Hero images: around 250KB to 400KB each.
           - Prefer AVIF/WebP exports with JPG fallback when new assets are prepared.
         -->
-        <div class="image-grid" aria-label="Nails gallery">
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Blue%20Extensions.jpg" data-alt="Nail set - blue extensions"><img src="assets/images/Nails/Blue%20Extensions.jpg" alt="Nail set - blue extensions" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Blue%20extensions%20pt2.jpg" data-alt="Nail set - blue extensions"><img src="assets/images/Nails/Blue%20extensions%20pt2.jpg" alt="Nail set - blue extensions" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pale%20blue%20extensions.jpg" data-alt="Nail set - pale blue extensions"><img src="assets/images/Nails/Pale%20blue%20extensions.jpg" alt="Nail set - pale blue extensions" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pink%20french%20with%20bow.jpg" data-alt="Nail set - pink french with bow"><img src="assets/images/Nails/Pink%20french%20with%20bow.jpg" alt="Nail set - pink french with bow" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Christmas%20nails.jpg" data-alt="Nail set - christmas nails"><img src="assets/images/Nails/Christmas%20nails.jpg" alt="Nail set - christmas nails" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Cat%20nails.jpg" data-alt="Nail set - cat nails"><img src="assets/images/Nails/Cat%20nails.jpg" alt="Nail set - cat nails" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" data-alt="Nail set - red nails with snowflake"><img src="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" alt="Nail set - red nails with snowflake" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Strawberry%20nails.jpg" data-alt="Nail set - strawberry nails"><img src="assets/images/Nails/Strawberry%20nails.jpg" alt="Nail set - strawberry nails" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Red%20nails%20plain.jpg" data-alt="Nail set - red nails plain"><img src="assets/images/Nails/Red%20nails%20plain.jpg" alt="Nail set - red nails plain" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Plain%20red%20nails%20square.jpeg" data-alt="Nail set - plain red nails square"><img src="assets/images/Nails/Plain%20red%20nails%20square.jpeg" alt="Nail set - plain red nails square" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" data-alt="Nail set - brown nails with cherry"><img src="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" alt="Nail set - brown nails with cherry" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Brown%20nails%20with%20cherry%20pt2.jpg" data-alt="Nail set - brown nails with cherry"><img src="assets/images/Nails/Brown%20nails%20with%20cherry%20pt2.jpg" alt="Nail set - brown nails with cherry" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Green%20star%20nails.jpg" data-alt="Nail set - green star nails"><img src="assets/images/Nails/Green%20star%20nails.jpg" alt="Nail set - green star nails" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Cartoon%20nails.jpg" data-alt="Nail set - cartoon nails"><img src="assets/images/Nails/Cartoon%20nails.jpg" alt="Nail set - cartoon nails" loading="lazy" decoding="async" width="900" height="1120"></button>
+        <div class="mobile-gallery-crop" data-crop-gallery>
+          <div class="image-grid" aria-label="Nails gallery">
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Blue%20Extensions.jpg" data-alt="Nail set - blue extensions"><img src="assets/images/Nails/Blue%20Extensions.jpg" alt="Nail set - blue extensions" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Blue%20extensions%20pt2.jpg" data-alt="Nail set - blue extensions"><img src="assets/images/Nails/Blue%20extensions%20pt2.jpg" alt="Nail set - blue extensions" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pale%20blue%20extensions.jpg" data-alt="Nail set - pale blue extensions"><img src="assets/images/Nails/Pale%20blue%20extensions.jpg" alt="Nail set - pale blue extensions" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pink%20french%20with%20bow.jpg" data-alt="Nail set - pink french with bow"><img src="assets/images/Nails/Pink%20french%20with%20bow.jpg" alt="Nail set - pink french with bow" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Christmas%20nails.jpg" data-alt="Nail set - christmas nails"><img src="assets/images/Nails/Christmas%20nails.jpg" alt="Nail set - christmas nails" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Cat%20nails.jpg" data-alt="Nail set - cat nails"><img src="assets/images/Nails/Cat%20nails.jpg" alt="Nail set - cat nails" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" data-alt="Nail set - red nails with snowflake"><img src="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" alt="Nail set - red nails with snowflake" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Strawberry%20nails.jpg" data-alt="Nail set - strawberry nails"><img src="assets/images/Nails/Strawberry%20nails.jpg" alt="Nail set - strawberry nails" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Red%20nails%20plain.jpg" data-alt="Nail set - red nails plain"><img src="assets/images/Nails/Red%20nails%20plain.jpg" alt="Nail set - red nails plain" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Plain%20red%20nails%20square.jpeg" data-alt="Nail set - plain red nails square"><img src="assets/images/Nails/Plain%20red%20nails%20square.jpeg" alt="Nail set - plain red nails square" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" data-alt="Nail set - brown nails with cherry"><img src="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" alt="Nail set - brown nails with cherry" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Brown%20nails%20with%20cherry%20pt2.jpg" data-alt="Nail set - brown nails with cherry"><img src="assets/images/Nails/Brown%20nails%20with%20cherry%20pt2.jpg" alt="Nail set - brown nails with cherry" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Green%20star%20nails.jpg" data-alt="Nail set - green star nails"><img src="assets/images/Nails/Green%20star%20nails.jpg" alt="Nail set - green star nails" loading="lazy" decoding="async" width="900" height="1120"></button>
+            <button class="image-card" type="button" data-lightbox="assets/images/Nails/Cartoon%20nails.jpg" data-alt="Nail set - cartoon nails"><img src="assets/images/Nails/Cartoon%20nails.jpg" alt="Nail set - cartoon nails" loading="lazy" decoding="async" width="900" height="1120"></button>
+          </div>
         </div>
+        <button class="btn btn-secondary" type="button" data-show-more-gallery>Show more</button>
       </div>
     </section>
 
@@ -313,6 +323,11 @@
 
   <script src="assets/site-config.2d266e56.js" defer></script>
   <script src="assets/main.68865a81.js" defer></script>
+  <script src="assets/mobile-enhancements.js" defer></script>
+  <div class="sticky-cta" role="navigation" aria-label="Quick actions">
+    <a class="btn btn-primary" href="contact.html">Book / Enquire</a>
+    <a class="btn btn-ghost" href="tel:+447361497192">Call</a>
+  </div>
 </body>
 </html>
 
