--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap"></noscript>
   <link rel="preload" as="image" href="assets/images/optimized/hero/pink-french-with-bow-960.89a922b0.jpg" imagesrcset="assets/images/optimized/hero/pink-french-with-bow-640.04546d96.jpg 640w, assets/images/optimized/hero/pink-french-with-bow-960.89a922b0.jpg 960w, assets/images/optimized/hero/pink-french-with-bow-1280.c986aa44.jpg 1280w" imagesizes="(max-width: 480px) 92vw, (max-width: 1024px) 90vw, 1200px">
   <link rel="stylesheet" href="assets/style.ae87f78b.css">
+  <link rel="stylesheet" href="assets/mobile.css">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to content</a>
@@ -449,6 +450,11 @@
 
   <script src="assets/site-config.2d266e56.js" defer></script>
   <script src="assets/main.68865a81.js" defer></script>
+  <script src="assets/mobile-enhancements.js" defer></script>
+  <div class="sticky-cta" role="navigation" aria-label="Quick actions">
+    <a class="btn btn-primary" href="contact.html">Book / Enquire</a>
+    <a class="btn btn-ghost" href="tel:+447361497192">Call</a>
+  </div>
 </body>
 </html>
 
