--- a/policies/accessibility.html
+++ b/policies/accessibility.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" media="print" onload="this.media='all'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap"></noscript>
   <link rel="stylesheet" href="../assets/style.ae87f78b.css">
+  <link rel="stylesheet" href="../assets/mobile.css">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to content</a>
@@ -137,14 +138,11 @@
 
   <script src="../assets/site-config.2d266e56.js" defer></script>
   <script src="../assets/main.68865a81.js" defer></script>
+  <script src="../assets/mobile-enhancements.js" defer></script>
+  <div class="sticky-cta" role="navigation" aria-label="Quick actions">
+    <a class="btn btn-primary" href="../contact.html">Book / Enquire</a>
+    <a class="btn btn-ghost" href="tel:+447361497192">Call</a>
+  </div>
 </body>
 </html>
-
-
-
-
-
-
-
-
 
