Fix mobile image rendering and thumbnail quality across site

--- a/accessibility.html
+++ b/accessibility.html
@@ -25,6 +25,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap"></noscript>
   <link rel="stylesheet" href="assets/style.ae87f78b.css">
   <link rel="stylesheet" href="assets/mobile.css">
+  <link rel="stylesheet" href="assets/images-fix.css">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to content</a>
@@ -155,4 +156,5 @@
   </div>
 </body>
 </html>
+
 
