--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link rel="preload" as="image" href="assets/images/optimized/hero/pink-french-with-bow-960.89a922b0.jpg" imagesrcset="assets/images/optimized/hero/pink-french-with-bow-640.04546d96.jpg 640w, assets/images/optimized/hero/pink-french-with-bow-960.89a922b0.jpg 960w, assets/images/optimized/hero/pink-french-with-bow-1280.c986aa44.jpg 1280w" imagesizes="(max-width: 480px) 92vw, (max-width: 1024px) 90vw, 1200px">
   <link rel="stylesheet" href="assets/style.ae87f78b.css">
   <link rel="stylesheet" href="assets/mobile.css">
+  <link rel="stylesheet" href="assets/images-fix.css">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to content</a>
@@ -457,4 +458,5 @@
   </div>
 </body>
 </html>
+
 
